plugins/plugin-core-support/web/css/screenshot.css
body:not([data-presentation="FixedSize"]).screenshot-squish, body:not([data-presentation="FixedSize"]).screenshot-squish .screenshot-squish {
    align-items: flex-start !important;
}
body:not([data-presentation="FixedSize"]).screenshot-squish .repl-output {
    padding: 0 1em 1em;
}
body:not([data-presentation="FixedSize"]).screenshot-squish sidecar.screenshot-squish {
    height: initial;
}
body:not([data-presentation="FixedSize"]).screenshot-squish .custom-content, body:not([data-presentation="FixedSize"]) .sidecar-content.screenshot-squish {
    flex: initial;
}
body:not([data-presentation="FixedSize"]).screenshot-squish #wskflowDiv.screenshot-squish {
    height: auto;
}

.screenshot-squish .hide-with-screenshot {
    display: none;
}

body.no-tooltips-anywhere [data-balloon]:before, body.no-tooltips-anywhere [data-balloon]:after {
    display: none !important;
}

.screenshot-save-button.green-text:hover {
    /* override hover effect, so that the icon is green even when hovered,
   which will be the case after the user clicks save! */
    color: var(--color-green) !important;
}
.screenshot-save-button.yellow-text:hover {
    /* same for yellow */
    color: var(--color-yellow) !important;
}

.screenshot-success-message {
    flex: 1;
}

.screenshot-check-icon {
    position: absolute;
    color: var(--color-ok);
    font-size: 20vmin;
    filter: brightness(1.375)  drop-shadow(0px 0px 1vmin var(--color-text-02));
}
body[kui-theme-style="dark"] .screenshot-check-icon {
    filter: brightness(1.75)  drop-shadow(0px 0px 1vmin var(--color-text-02));
}
.screenshot-check-icon i {
    text-shadow: 0 0 0.1ex var(--color-base02);
}

#screenshot-captured {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    z-index: 5;
    box-shadow: 0 0 2em var(--color-base01);
    border: 1px solid var(--color-base04);
}

#screenshot-captured .sidecar-bottom-stripe {
    justify-content: flex-end;
    align-items: center;
    border-top-color: var(--color-base04);
}

#screenshot-captured .screenshot-image {
    max-width: 100%;
    min-height: 300px; /* we need some min space to fit the green check and Screenshot copied to clipboard */
    max-height: 100%;
    filter: grayscale(0.375) contrast(0.75) blur(1px);
}

