fix(plugins/plugin-core-support): screenshot of repl does not squish repl-block
Fixes #999

--- a/plugins/plugin-core-support/web/css/screenshot.css
+++ b/plugins/plugin-core-support/web/css/screenshot.css
@@ -4,6 +4,9 @@ body:not([data-presentation="FixedSize"]).screenshot-squish, body:not([data-pres
 body:not([data-presentation="FixedSize"]).screenshot-squish .repl-output {
     padding: 0 1em 1em;
 }
+body:not([data-presentation="FixedSize"]) .repl-block.screenshot-squish {
+    align-items: flex-start;
+}
 body:not([data-presentation="FixedSize"]).screenshot-squish sidecar.screenshot-squish {
     height: initial;
 }
